; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/pxa/extr_pxa-ssp.c_ssp_get_scr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/pxa/extr_pxa-ssp.c_ssp_get_scr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssp_device = type { i64 }

@SSCR0 = common dso_local global i32 0, align 4
@PXA25x_SSP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ssp_device*)* @ssp_get_scr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssp_get_scr(%struct.ssp_device* %0) #0 {
  %2 = alloca %struct.ssp_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.ssp_device* %0, %struct.ssp_device** %2, align 8
  %5 = load %struct.ssp_device*, %struct.ssp_device** %2, align 8
  %6 = load i32, i32* @SSCR0, align 4
  %7 = call i32 @ssp_read_reg(%struct.ssp_device* %5, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = call i64 (...) @cpu_is_pxa25x()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load %struct.ssp_device*, %struct.ssp_device** %2, align 8
  %12 = getelementptr inbounds %struct.ssp_device, %struct.ssp_device* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @PXA25x_SSP, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %10
  %17 = load i32, i32* %3, align 4
  %18 = ashr i32 %17, 8
  %19 = and i32 %18, 255
  %20 = mul nsw i32 %19, 2
  %21 = add nsw i32 %20, 2
  store i32 %21, i32* %4, align 4
  br label %27

22:                                               ; preds = %10, %1
  %23 = load i32, i32* %3, align 4
  %24 = ashr i32 %23, 8
  %25 = and i32 %24, 4095
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %22, %16
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}

declare dso_local i32 @ssp_read_reg(%struct.ssp_device*, i32) #1

declare dso_local i64 @cpu_is_pxa25x(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
